--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,36 +1,65 @@
+unbind C-b
+set -g prefix M-z
+
 setw -g mode-keys vi
 
 set -g default-terminal "screen-256color"
 set -g default-command "reattach-to-user-namespace -l zsh"
 
+# 设置窗口和面板索引从1开始
 set -g base-index 1
 set -g pane-base-index 1
 
+# 重载配置
 bind r source-file ~/.tmux.conf
 
-unbind '"'
+# 分屏-水平分割
 unbind %
-bind | split-window -h
+bind \ split-window -h
+
+# 分屏-垂直分割
+unbind '"'
 bind - split-window -v
 
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+# 快速选择面板
+bind -r h select-pane -L
+bind -r j select-pane -D
+bind -r k select-pane -U
+bind -r l select-pane -R
 
-bind Escape copy-mode
+# 窗口之间切换
+bind -r C-h select-window -t :-
+bind -r C-l select-window -t :+
+
+# 修改窗格大小
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5ccccccczcx
+bind -r L resize-pane -R 5
+
+# 复制粘贴
 unbind [
+bind Escape copy-mode
 unbind p
 bind p paste-buffer
 bind -t vi-copy 'v' begin-selection
 bind -t vi-copy 'y' copy-selection
 
+# 禁用鼠标控制
+set -g mode-mouse off
+set -g mouse-resize-pane off
+set -g mouse-select-pane off
+set -g mouse-select-window off
+
 setw -g automatic-rename on
 setw -g monitor-activity on
+set -g visual-activity on
 
-set -g status-interval 1
+set -g status-utf8 on
+set -g status-interval 3
 set -g status-justify left
 
+# 状态栏的颜色
 set -g status-bg colour236
 set -g status-fg colour231
 
