config tmux & vim

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,14 +1,11 @@
-unbind C-b
-set -g prefix M-z
-
 setw -g mode-keys vi
 
 set -g default-terminal "screen-256color"
-set -g default-command "reattach-to-user-namespace -l zsh"
 
 # 设置窗口和面板索引从1开始
 set -g base-index 1
 set -g pane-base-index 1
+set -g renumber-windows on
 
 # 重载配置
 bind r source-file ~/.tmux.conf
@@ -34,7 +31,7 @@ bind -r C-l select-window -t :+
 # 修改窗格大小
 bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5ccccccczcx
+bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
 # 复制粘贴
@@ -42,33 +39,18 @@ unbind [
 bind Escape copy-mode
 unbind p
 bind p paste-buffer
-bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-selection
+bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
+bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel "pbcopy"
+bind-key -T copy-mode-vi 'V' send -X select-line
+bind-key -T copy-mode-vi 'r' send-keys -X rectangle-toggle
 
-# 禁用鼠标控制
-set -g mode-mouse off
-set -g mouse-resize-pane off
-set -g mouse-select-pane off
-set -g mouse-select-window off
-
+#set -g mouse on
 setw -g automatic-rename on
 setw -g monitor-activity on
 set -g visual-activity on
 
-set -g status-utf8 on
-set -g status-interval 3
-set -g status-justify left
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'odedlaz/tmux-onedark-theme'
 
-# 状态栏的颜色
-set -g status-bg colour236
-set -g status-fg colour231
-
-set -g status-attr dim
-setw -g window-status-attr reverse
-setw -g window-status-current-attr bold
-
-set -g status-left '#[fg=colour191,bg=colour8,bold] [#S] '
-setw -g window-status-format '#[fg=colour237,bg=colour33] #I:#W '
-setw -g window-status-current-format '#[fg=colour223,bg=colour1] #F#I:#W '
-set -g status-right '#[fg=colour15,bg=colour8,bold] %Y-%m-%d %H:%M:%S '
-
+run -b '~/.tmux/plugins/tpm/tpm'
