--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule ".emacs.d"]
 	path = .emacs.d
-	url = https://github.com/bbatsov/prelude.git
+	url=https://github.com/shixiongfei/.emacs.d
