--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
 setw -g mode-keys vi
 
-set -g default-terminal "screen-256color"
+set-option -g default-terminal "screen-256color"
 
 # 设置窗口和面板索引从1开始
 set -g base-index 1
@@ -49,8 +49,13 @@ setw -g automatic-rename on
 setw -g monitor-activity on
 set -g visual-activity on
 
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'odedlaz/tmux-onedark-theme'
+# Zenburn colors
+setw -g clock-mode-colour colour117
+setw -g mode-style fg=colour117,bold
+set -g status-style fg=colour248,bg=colour235,dim
+set -g status-left '#[fg=colour187,bold]#H'
+set -g status-right '#[fg=colour187,bold]%H:%M'
+setw -g window-status-current-style fg=colour223,bg=colour237,bold
+setw -g window-status-current-format '#I:#W#F'
+set -g message-style fg=colour117,bold
 
-run -b '~/.tmux/plugins/tpm/tpm'
