--- a/.tmux.conf
+++ b/.tmux.conf
@@ -49,7 +49,7 @@ setw -g automatic-rename on
 setw -g monitor-activity on
 set -g visual-activity on
 
-# Zenburn colors
+# Setup colors
 setw -g clock-mode-colour colour117
 setw -g mode-style fg=colour117,bold
 set -g status-style fg=colour248,bg=colour235,dim
